remove horizontal scroll bar issue in responsive design and start README.md documentation

--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -15,6 +15,7 @@ body {
     font-weight: 400;
     color: #f9e7e9;
     background-color: #681e2a;
+    overflow-x: hidden;
 }
 
 /* headings and logo */
@@ -407,7 +408,7 @@ footer {
     }
 
     #home {
-        height: 800px;
+        height: 900px;
     }
 
     #home-vid {
